Revert "Refactor and clean up code"
This reverts commit b2795f7bfe09e1e055977b55c62af3fde1badd49.